<resources>
    <string name="app_name">Hack2015</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_chat1">Cena Gif</string>
    <string name="blank_view">""</string>
    <string name="button_join">Join</string>
    <string name="button_send">Send</string>
    <string name="edit_username">Username</string>
    <string name="title_activity_cena_chat">CenaChatActivity</string>
    <string name="button_cena">Cenafy</string>
    <string name="opt1">Refresh</string>
    <string name="opt2">Cenafy</string>
    <string name="opt4">Cena Gif</string>
    <string name="opt3">View Images</string>
    <string name="edit_infile">Infile</string>


</resources>
